 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.7                                                      ??
================================================================================
 + Base: Romanise Vietnamese, Croatian, Hiragana and Katakana. (Subs-PrettyUrls.php)
 % Started the profiles package.
 ! Base: URLs in <link> tags and feeds should be rewritten too. (QueryString.php, News.php)
 ! Base: Fixed a broken query in Subs-Post.php.
 ! Base: Don't use 301 redirections if rewriting isn't enabled! (Display.php, MessageIndex.php)
 ! Base: Hopefully fixed the queries to work in MySQL 3.34. (install.php)

Pretty URLs 0.6                                                      May 2, 2007
================================================================================
 + Base: Use pretty URLs in redirectExit(). (Subs.php)
 + Base: Added the updateFilters() and filterAndHtaccessSettings() functions. (Subs-PrettyUrls.php, PrettyUrls-Filters.php)
 ! Base: Fixed a missing global in generatePrettyUrl(). (Subs-PrettyUrls.php)
 + Base: Filter board urls. (PrettyUrls-Filters.php)
 + Base: Allow permanent redirects. (Subs.php)
 + Base: Filter topic urls. (PrettyUrls-Filters.php)
 ! Base: Don't try to rewrite urls once the code has been removed! (uninstall.php)
 - Base: Remove the pretty_url column from the topics table as it's no longer needed. (install.php)
 ! Base: Update the synchroniseTopicUrls() function for the above change. (Subs-PrettyUrls.php)
 ! Base: Changed the format of specifying filters, which are now stored in a DB setting. (install.php, Subs-PrettyUrls.php, PrettyUrls-Filters.php)
 % Base: All filter callbacks should now be placed only in PrettyUrls-Filters.php.